Sun Oct 13 21:46:18 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* lock-acquire.c (fshelp_acquire_lock): Return success, not EBADF,
 	when unlocking a file which we don't have locked; this is netbsd's
 	behavior.

Thu Oct 10 17:12:19 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* lock-acquire.c (fshelp_acquire_lock): Use hurd_condition_wait so
	we are properly interruptible.

Thu Sep 12 16:21:51 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(libfshelp.so): Delete special dependency.

Tue Jul 16 11:30:42 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* lock-acquire.c (EWOULDBLOCK): Define, to work around new libc
 	bug.

Sun Jul  7 21:26:02 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* start-translator.c (fshelp_start_translator): Don't use unsafe
 	MOVE_SEND in call to fshelp_start_translator_long.
	* fetch-root.c (fshelp_fetch_root): Don't use unsafe MOVE_SEND in
 	call to fshelp_start_translator_long.

Thu Jul  4 15:38:36 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* get-identity.c (fshelp_get_identity): Bother to initialize
 	I->fileno.

Wed Jul  3 11:29:49 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* get-identity.c: New file.
	* fshelp.h (struct port_bucket): Mention name in global scope.
	(fshelp_get_identity): New declaration.
	* Makefile (SRCS): Add get-identity.c.

Thu Jun 27 17:56:44 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (LCLHDRS): Add trans.h.

Mon Jun 24 16:00:48 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* fetch-root.c (fshelp_fetch_root): Deal properly with errors from
 	auth_makeauth.

Fri Jun 21 00:07:26 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* set-options.c (fshelp_set_options): Add & use INPUT arg.
	* fshelp.h (fshelp_set_options): Add INPUT argument.
	(fshelp_return_malloced_buffer): New declaration.
	* return-buffer.c: New file.
	* Makefile (SRCS): Add return-buffer.c.
